<resources>
    <string name="app_name">LA Adventure</string>
    <string name="txtWelcome">Welcome to Los Angeles</string>
    <string name="txtDescription">Image of LA</string>
    <string name="btnSummer">Summer</string>
    <string name="btnWinter">Winter</string>
    <string name="txtDirections">Choose a season!</string>
    <string name="txtLA">Los Angeles</string>
    <string name="txtLB">Orange County</string>
    <string name="btnBack">Return</string>
    <string name="imgFair">OC Fair image</string>
    <string name="imgGriffith">image of Griffith Observatory</string>
    <string name="imgVenice">image of Venice Beach</string>
    <string name="imgPier">image of Santa Monica Pier</string>
    <string name="txtPier">Santa Monica Pier</string>
    <string name="txtMust">Description:</string>
    <string name="txtVenice">Venice Beach</string>
    <string name="txtDisney">DisnleyLand</string>
    <string name="txtDisneyDes1">There will be a 20% discount if you enter the park with 3 children!!</string>
    <string name="RadKids">With children</string>
    <string name="RadAdults">Only adults</string>
    <string name="txtGriffith">Griffith Observatory</string>
    <string name="txtResult"></string>
    <string name="txtPike">The Pike Ice skating</string>
    <string name="txtPikeCost">Tickets cost $18 a person. The Pike Ice Skating is a great place to spend with the family. Right by the shore, The Pike is full of many stores and restaurants.</string>
    <string name="SecStreet">2nd Street Lights</string>
    <string name="txtStreetDes">Second Street has many events that take place, from boat rides to candy cane lanes. Second Street in the Winter time is one you can not miss out on.</string>
    <string name="txtLAZoo">Los Angeles Zoo Lights</string>
    <string name="txtLAZooDes">The Los Angeles Zoo lights take place at 7pm and is fill with wonderful lights all around the zoo. It is a perfect place to take youre family and friends. Most of the animals will be asleep but some will be active and interacting with the lights at night.</string>
    <string name="RadHandi">With handicap</string>
    <string name="RadWithout">Without handicap</string>
    <string name="txtOCFair">Orange County Fair</string>
    <string name="txtFairDes">Tickets cost $12 per person. If someone in your group is handicap we will give you a 10% discount!!</string>
    <string name="btnDate">Reserve a Date</string>
    <string name="btnCost">Compute Cost</string>
    <string name="txtPeople">Number of people</string>
    <string name="txtTickets">Number of Tickets</string>
    <string name="txtGriffithDes">The Griffith Observatory is a facility in Los Angeles, California, sitting on the south-facing slope of Mount Hollywood in Los Angeles Griffith Park.</string>
    <string name="txtVeniceDes">Venice Beach is a great place to spend your summer while in Los Angeles. Venice has art, pop culture, and beautiful views. You can enjoy your relaxed day at the beach or go for a run or ride a bike on the trails. The weather is always the best in Venice Beach</string>
    <string name="txtPierDes">Santa Monica Pier is one of the most visited sites in southern California. It is rich in people, food, and art. The pier has multiple games and attractions for people to enjoy. Santa Monica Pier is a place you must go if you wish to visit Los Angeles.</string>
</resources>
