<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Disney">

    <TextView
        android:id="@+id/txtDisney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="19dp"
        android:text="@string/txtDisney"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imgDisney"
        android:layout_width="314dp"
        android:layout_height="208dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/txtDescription"
        app:srcCompat="@drawable/disney" />

    <EditText
        android:id="@+id/txtPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="188dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtPeople"
        android:inputType="number"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radGroup"
        android:layout_width="153dp"
        android:layout_height="79dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:layout_marginBottom="106dp">

        <RadioButton
            android:id="@+id/RadKids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadKids"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RadAdults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/RadAdults"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtDisneyDes"
        android:layout_width="262dp"
        android:layout_height="79dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/txtDisneyDes1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtResult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:text="@string/btnCost" />

</RelativeLayout>