<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OCFair">

    <TextView
        android:id="@+id/txtOCFair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:text="@string/txtOCFair"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="219dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        app:srcCompat="@drawable/fair" />

    <TextView
        android:id="@+id/txtOCFairDes"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="249dp"
        android:text="@string/txtFairDes"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="147dp">

        <RadioButton
            android:id="@+id/RadHandicap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadHandi"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/RadWithout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadWithout"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtPeople2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="226dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtPeople"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCost2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:text="@string/btnCost"
        android:textSize="18sp" />
</RelativeLayout>