<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LAZoo">

    <TextView
        android:id="@+id/txtLAZoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="27dp"
        android:text="@string/txtLAZoo"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imgLAzoo"
        android:layout_width="360dp"
        android:layout_height="222dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:contentDescription="@string/txtDescription"
        app:srcCompat="@drawable/lazoo" />

    <TextView
        android:id="@+id/txtLAZooDes"
        android:layout_width="304dp"
        android:layout_height="149dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginBottom="48dp"
        android:text="@string/txtLAZooDes"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtMust5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginBottom="216dp"
        android:text="@string/txtMust"
        android:textSize="20sp" />
</RelativeLayout>